# eth_usdc

./: .gitignore  .rustc_info.json  Cargo.toml  erslaAppDataLocalProgramsTrae CNresourcesappoutvsworkbenchcontribterminalcommonscriptssafe_rm_aliases.ps1 } catch{} ; Write-Output [Trae CN] Safe Rm alias is not enabled, try to fix it now.
data/: exchange_info.json
release/: eth_usdc.d
release/.fingerprint/anyhow-3479d87b33a25ec2/: run-build-script-build-script-build  run-build-script-build-script-build.json
release/.fingerprint/anyhow-480ecbdeca8df6e0/: lib-anyhow  lib-anyhow.json
release/.fingerprint/anyhow-5d2982aeb53ddad7/: lib-anyhow  lib-anyhow.json
release/.fingerprint/anyhow-738abcb7aba0698d/: build-script-build-script-build  build-script-build-script-build.json
release/.fingerprint/anyhow-82d84b2713591c2c/: build-script-build-script-build  build-script-build-script-build.json
release/.fingerprint/anyhow-ff7278fc99e605f3/: run-build-script-build-script-build  run-build-script-build-script-build.json
release/.fingerprint/arc-swap-29c56e910a98ea0b/: lib-arc_swap  lib-arc_swap.json
release/.fingerprint/arc-swap-781f2810a0c1418f/: lib-arc_swap  lib-arc_swap.json
release/.fingerprint/arrayvec-7606afc19f032e92/: lib-arrayvec  lib-arrayvec.json
release/.fingerprint/arrayvec-8a63734f827c5bb3/: lib-arrayvec  lib-arrayvec.json
release/.fingerprint/atomic-waker-557c58084b858adc/: lib-atomic_waker  lib-atomic_waker.json
src/: chat_api.rs  ed25519.rs  logger.rs  main.rs  rest_api.rs  utils.rs  ws_api.rs
(+1008 files in other folders)
